Fixed buddy list visibility layer.

--- a/src/styles/components/_buddylist.scss
+++ b/src/styles/components/_buddylist.scss
@@ -25,6 +25,7 @@ right: 0px;
 bottom: 0px;
 width:285px;
 pointer-events:auto;
+z-index:50;
 }
 #buddylist:before {
 position:absolute;
